Fix last card being cut off in mobile view

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -56,7 +56,7 @@
   }
 
   .layout-content {
-    padding: 1rem;
+    padding: 1rem 1rem 5rem 1rem;
   }
 }
 
